# transparente

./: README.md  dmg_settings.py  environment.yml  gui_main.py  main.py
.github/workflows/: release.yml
rust/: Cargo.toml  build_log.txt
rust/src/generators/: color.rs  mono.rs
src/: config.py  gui.py
src/generators/: __init__.py  alpha.py  color.py  mono.py  thumbnail.py
