[package]
name = "transparente_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
serde = { version = "1.0", features = ["derive"] }
kmeans_colors = "0.7"
anyhow = "1.0"
tempfile = "3.24"
serde_json = "1.0"
walkdir = "2.5"
palette = "0.7"
rfd = "0.17.2"
rand = "0.9"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"
reqwest = { version = "0.13", features = ["blocking"] }
imageproc = "0.26"
dirs = "6.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }



