[package]
name = "transparente_rust"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Losada <daniel.losada@ehu.eus>"]
description = "Aplicacion de IA de conversión de texto a imágenes con fondo transparente"
license = "MIT"

[dependencies]
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
serde = { version = "1.0", features = ["derive"] }
kmeans_colors = "0.7"
anyhow = "1.0"
tempfile = "3.24"
serde_json = "1.0"
walkdir = "2.5"
palette = "0.7"
rfd = "0.17.2"
rand = "0.9"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"
reqwest = { version = "0.13", features = ["blocking"] }
imageproc = "0.26"
dirs = "6.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.33", features = ["wayland", "x11"] }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/transparente_rust", dest = "/usr/bin/transparente_rust", mode = "755" }
]

[package.metadata.generate-rpm.requires]
"libwayland-client" = ">= 1.20"
"libxkbcommon" = ">= 1.0"
"openssl-libs" = "*"
"mesa-libEGL" = "*"
